--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.1.0",
